# ytdl-nfo

./: README.md  pyproject.toml  setup.py  test.json
ytdl_nfo/: Ytdl_nfo.py  __init__.py  __main__.py  nfo.py  ytdl_nfo.py
ytdl_nfo/configs/: bilibili.yaml  vimeo.yaml  youtube.yml  zype.yaml
